ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resello-ingress
  namespace: resello
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - api.resello.co.kr
        - www.resello.co.kr
      secretName: resello-tls
  rules:
    - host: api.resello.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
